# neurotex

./: .gitignore  README.md  docker-compose.yml
service_code_analysis/: Dockerfile  pyproject.toml
service_code_analysis/app/: function_extractor.py  main.py  repo_manager.py  schemas.py
service_code_analysis/tests/: test_app.py
service_llm/: Dockerfile  pyproject.toml
service_llm/app/: config.py  llm_client.py  main.py  schemas.py
service_llm/app/tests/: test_app.py
