[tool.poetry]
name = "service_code_analysis"
version = "0.1.0"
description = "Code Analysis Service"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "app", from = "." }
]


[tool.poetry.dependencies]

openai = "^0.27.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.100.0", allow-prereleases = true }
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
requests = "^2.27.0"
openai = "^0.27.0"
nox = "^2023.10.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
