[tool.poetry]
name = "service_llm"
version = "0.1.0"
description = "LLM Service for code analysis"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.100.0", allow-prereleases = true }
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
openai = "^0.27.0"
transformers = "^4.30.0"
torch = "^2.0.0"
nox = "^2023.10.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



